# routes/api.php
@@ -22,3 +22,42 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
+Route::prefix('v1')->group(function () {
+    Route::get("ping",[PostController::class,"ping"]);
+
+    Route::middleware(['auth:sanctum', 'verified'])->group(function () {
+        // Comments
+        Route::apiResource('comments', CommentController::class)->only('destroy');
+        Route::apiResource('posts.comments', PostCommentController::class)->only('store');
+
+        // Posts
+        Route::apiResource('posts', PostController::class)->only(['update', 'store', 'destroy']);
+        Route::post('/posts/{post}/likes', [PostLikeController::class, 'store'])->name('posts.likes.store');
+        Route::delete('/posts/{post}/likes', [PostLikeController::class, 'destroy'])->name('posts.likes.destroy');
+
+        // Users
+        Route::apiResource('users', UserController::class)->only('update');
+
+        // Media
+        Route::apiResource('media', MediaController::class)->only(['store', 'destroy']);
+    });
+
+    Route::post('/authenticate', [AuthenticateController::class, 'authenticate'])->name('authenticate');
+
+
+    // Posts
+    Route::apiResource('posts', PostController::class)->only(['index', 'show','store']);
+    Route::apiResource('users.posts', UserPostController::class)->only('index');
+
+
+    // Comments
+    Route::apiResource('posts.comments', PostCommentController::class)->only('index');
+    Route::apiResource('users.comments', UserCommentController::class)->only('index');
+    Route::apiResource('comments', CommentController::class)->only(['index', 'show']);
+
+    // Users
+    Route::apiResource('users', UserController::class)->only(['index', 'show']);
+
+    // Media
+    Route::apiResource('media', MediaController::class)->only('index');
+});
